generate synthetic groups

--- a/notebooks/connections_dev.ipynb
+++ b/notebooks/connections_dev.ipynb
@@ -11,12 +11,12 @@
     "sys.path.append(\"..\")\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from trl_wrapper.trainer_wrapper import TrainerWrapper, GRPO_CONNECTIONS_CONFIG\n",
+    "from trl_wrapper.trainer_wrapper import TrainerWrapper, GRPO_CONNECTIONS_CONFIG, SMOL_LM_135M\n",
     "\n",
     "cfg = GRPO_CONNECTIONS_CONFIG\n",
     "cfg.train_batch_size = 2\n",
     "cfg.num_generations = 2\n",
-    "# cfg.model_id_or_path = SMOL_LM_135M\n",
+    "cfg.model_id_or_path = SMOL_LM_135M\n",
     "cfg.notebook_mode = True\n",
     "cfg.max_samples = 1000"
    ]
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wrapper.init_data_module()"
+    "from model.reasoning import ConnectionsDataModule"
    ]
   },
   {
@@ -46,7 +46,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wrapper.data_module.train_dataset[0]"
+    "conn = ConnectionsDataModule(wrapper.tokenizer, wrapper.config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "import pandas as pd\n",
+    "dataset = pd.read_json(\"../dataset_files/connections_prompts.jsonl\", lines=True)\n",
+    "df_groups = pd.json_normalize(dataset['solution'], 'groups')\n",
+    "\n",
+    "group_list = [\n",
+    "    {\n",
+    "        \"groups\": (g := df_groups.sample(4, replace=False).reset_index(drop=True)).to_dict(orient=\"records\"),\n",
+    "        \"words\": list(itertools.chain.from_iterable(g['words'].dropna()))\n",
+    "    }\n",
+    "    for _ in range(100000)\n",
+    "]\n",
+    "\n",
+    "out = pd.DataFrame(group_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wrapper.init_data_module()"
    ]
   },
   {
