--- a/notebooks/download_offline.ipynb
+++ b/notebooks/download_offline.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/brianfitzgerald/Documents/GitHub/smolmodels/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from huggingface_hub import snapshot_download\n",
     "import os\n",
@@ -144,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/4 [00:00<?, ?it/s]"
+      "  0%|          | 0/6 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -165,8 +156,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 10 files: 100%|██████████| 10/10 [00:00<00:00, 154202.35it/s]\n",
-      " 25%|██▌       | 1/4 [00:00<00:00,  6.11it/s]"
+      "Fetching 10 files: 100%|██████████| 10/10 [00:00<00:00, 169809.88it/s]\n",
+      " 17%|█▋        | 1/6 [00:00<00:00,  5.86it/s]"
      ]
     },
     {
@@ -181,8 +172,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 10 files: 100%|██████████| 10/10 [00:00<00:00, 39.36it/s]\n",
-      " 50%|█████     | 2/4 [00:00<00:00,  3.35it/s]"
+      "Fetching 10 files: 100%|██████████| 10/10 [00:00<00:00, 161942.24it/s]\n"
      ]
     },
     {
@@ -197,8 +187,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 10 files: 100%|██████████| 10/10 [00:00<00:00, 13.98it/s]\n",
-      " 75%|███████▌  | 3/4 [00:01<00:00,  1.81it/s]"
+      "Fetching 10 files: 100%|██████████| 10/10 [00:00<00:00, 121927.44it/s]\n",
+      " 50%|█████     | 3/6 [00:00<00:00,  8.69it/s]"
      ]
     },
     {
@@ -213,15 +203,47 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 21 files: 100%|██████████| 21/21 [02:38<00:00,  7.57s/it]\n",
-      "100%|██████████| 4/4 [02:40<00:00, 40.13s/it]"
+      "Fetching 21 files: 100%|██████████| 21/21 [00:00<00:00, 202019.23it/s]\n",
+      " 67%|██████▋   | 4/6 [00:00<00:00,  8.86it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/brianfitzgerald/.cache/huggingface/hub/models--HuggingFaceTB--SmolLM2-135M-Instruct/snapshots/e2c3f7557efbdec707ae3a336371d169783f1da1\n"
+      "/Users/brianfitzgerald/.cache/huggingface/hub/models--HuggingFaceTB--SmolLM2-135M-Instruct/snapshots/e2c3f7557efbdec707ae3a336371d169783f1da1\n",
+      "Qwen/Qwen2.5-3B-Instruct\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching 12 files: 100%|██████████| 12/12 [02:51<00:00, 14.33s/it]\n",
+      " 83%|████████▎ | 5/6 [02:52<00:56, 57.00s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/brianfitzgerald/.cache/huggingface/hub/models--Qwen--Qwen2.5-3B-Instruct/snapshots/aa8e72537993ba99e69dfaafa59ed015b17504d1\n",
+      "mistralai/Ministral-8B-Instruct-2410\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching 16 files: 100%|██████████| 16/16 [20:26<00:00, 76.67s/it]  \n",
+      "100%|██████████| 6/6 [23:19<00:00, 233.24s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/brianfitzgerald/.cache/huggingface/hub/models--mistralai--Ministral-8B-Instruct-2410/snapshots/4847e87e5975a573a2a190399ca62cd266c899ad\n"
      ]
     },
     {
@@ -241,6 +263,8 @@
     "        \"Qwen/Qwen2.5-0.5B\",\n",
     "        \"Qwen/Qwen2.5-0.5B-Instruct\",\n",
     "        \"HuggingFaceTB/SmolLM2-135M-Instruct\",\n",
+    "        \"Qwen/Qwen2.5-3B-Instruct\",\n",
+    "        \"mistralai/Ministral-8B-Instruct-2410\"\n",
     "    ]\n",
     "):\n",
     "    print(model_name)\n",
