--- a/notebooks/download_offline.ipynb
+++ b/notebooks/download_offline.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/brianfitzgerald/Documents/GitHub/smolmodels/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from huggingface_hub import snapshot_download\n",
     "import os\n",
@@ -135,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -156,8 +165,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 10 files: 100%|██████████| 10/10 [00:00<00:00, 169809.88it/s]\n",
-      " 17%|█▋        | 1/6 [00:00<00:00,  5.86it/s]"
+      "Fetching 10 files: 100%|██████████| 10/10 [00:00<00:00, 166440.63it/s]\n",
+      " 17%|█▋        | 1/6 [00:00<00:00,  5.37it/s]"
      ]
     },
     {
@@ -172,7 +181,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 10 files: 100%|██████████| 10/10 [00:00<00:00, 161942.24it/s]\n"
+      "Fetching 10 files: 100%|██████████| 10/10 [00:00<00:00, 163840.00it/s]\n",
+      " 33%|███▎      | 2/6 [00:00<00:00,  6.87it/s]"
      ]
     },
     {
@@ -187,8 +197,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 10 files: 100%|██████████| 10/10 [00:00<00:00, 121927.44it/s]\n",
-      " 50%|█████     | 3/6 [00:00<00:00,  8.69it/s]"
+      "Fetching 10 files: 100%|██████████| 10/10 [00:00<00:00, 39643.71it/s]\n",
+      " 50%|█████     | 3/6 [00:00<00:00,  7.34it/s]"
      ]
     },
     {
@@ -203,8 +213,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 21 files: 100%|██████████| 21/21 [00:00<00:00, 202019.23it/s]\n",
-      " 67%|██████▋   | 4/6 [00:00<00:00,  8.86it/s]"
+      "Fetching 21 files: 100%|██████████| 21/21 [00:00<00:00, 356600.74it/s]\n",
+      " 67%|██████▋   | 4/6 [00:00<00:00,  8.04it/s]"
      ]
     },
     {
@@ -219,8 +229,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 12 files: 100%|██████████| 12/12 [02:51<00:00, 14.33s/it]\n",
-      " 83%|████████▎ | 5/6 [02:52<00:56, 57.00s/it]"
+      "Fetching 12 files: 100%|██████████| 12/12 [00:00<00:00, 221725.32it/s]"
      ]
     },
     {
@@ -235,8 +244,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 16 files: 100%|██████████| 16/16 [20:26<00:00, 76.67s/it]  \n",
-      "100%|██████████| 6/6 [23:19<00:00, 233.24s/it]"
+      "\n",
+      "Fetching 16 files: 100%|██████████| 16/16 [00:00<00:00, 259107.58it/s]\n",
+      "100%|██████████| 6/6 [00:00<00:00,  8.36it/s]"
      ]
     },
     {
