trl 0.16.1, logging, and group size reward fix

--- a/notebooks/connections_reward_dev.ipynb
+++ b/notebooks/connections_reward_dev.ipynb
@@ -17,10 +17,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-04-03 21:34:50.433\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m305\u001b[0m - \u001b[1mSetting padding side to: right\u001b[0m\n",
-      "\u001b[32m2025-04-03 21:34:50.433\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_data_module\u001b[0m:\u001b[36m356\u001b[0m - \u001b[1mUsing chat template override: ministral\u001b[0m\n",
-      "\u001b[32m2025-04-03 21:34:50.434\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.wrapper_config\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m134\u001b[0m - \u001b[1mCache dir: ../dataset_caches/connections_data_module\u001b[0m\n",
-      "Map: 100%|██████████| 100000/100000 [00:04<00:00, 20089.44 examples/s]\n"
+      "You are using the default legacy behaviour of the <class 'transformers.models.llama.tokenization_llama_fast.LlamaTokenizerFast'>. This is expected, and simply means that the `legacy` (previous) behavior will be used so nothing changes for you. If you want to use the new behaviour, set `legacy=False`. This should only be set if you understand what it means, and thoroughly read the reason why this was added as explained in https://github.com/huggingface/transformers/pull/24565 - if you loaded a llama tokenizer from a GGUF file you can ignore this message.\n",
+      "\u001b[32m2025-04-10 21:55:41.667\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m285\u001b[0m - \u001b[1mSetting padding side to: right\u001b[0m\n",
+      "\u001b[32m2025-04-10 21:55:41.668\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_data_module\u001b[0m:\u001b[36m336\u001b[0m - \u001b[1mUsing chat template override: ministral\u001b[0m\n",
+      "\u001b[32m2025-04-10 21:55:41.668\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.wrapper_config\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m145\u001b[0m - \u001b[1mCache dir: ../dataset_caches/connections_data_module\u001b[0m\n",
+      "Map: 100%|██████████| 100000/100000 [00:04<00:00, 21136.28 examples/s]\n"
      ]
     }
    ],
@@ -31,63 +32,31 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from model.reasoning import ConnectionsDataModule\n",
-    "from trl_wrapper.trainer_wrapper import TrainerWrapper, GRPO_MATH_CONFIG, GRPO_CONNECTIONS_CONFIG\n",
+    "from trl_wrapper.trainer_wrapper import TrainerWrapper, GRPO_MATH_CONFIG, CONNECTIONS_CONFIG\n",
     "from trl_wrapper.wrapper_config import DatasetConfig\n",
     "from IPython.display import display\n",
     "\n",
-    "wrapper = TrainerWrapper(GRPO_CONNECTIONS_CONFIG)\n",
+    "wrapper = TrainerWrapper(CONNECTIONS_CONFIG)\n",
     "\n",
     "wrapper.init_data_module()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'groups': [{'reason': 'defeat badly',\n",
-       "   'words': ['crush', 'rout', 'shellac', 'trash']},\n",
-       "  {'reason': 'tops', 'words': ['cami', 'halter', 'tank', 'tee']},\n",
-       "  {'reason': 'butt', 'words': ['bottom', 'buns', 'seat', 'tail']},\n",
-       "  {'reason': 'kinds of whales', 'words': ['blue', 'fin', 'gray', 'right']}],\n",
-       " 'words': ['crush',\n",
-       "  'rout',\n",
-       "  'shellac',\n",
-       "  'trash',\n",
-       "  'cami',\n",
-       "  'halter',\n",
-       "  'tank',\n",
-       "  'tee',\n",
-       "  'bottom',\n",
-       "  'buns',\n",
-       "  'seat',\n",
-       "  'tail',\n",
-       "  'blue',\n",
-       "  'fin',\n",
-       "  'gray',\n",
-       "  'right'],\n",
-       " 'prompt': [{'content': '\\nYou are an expert puzzle solving model.\\nFind groups of words that are related to each other. Each group is four words long. There are exactly four groups in total.\\nYou may only use each word in one group.\\nRespond in the following format:\\n<reasoning>\\n...\\n</reasoning>\\n<answer>\\n<group>\\n...\\n</group>\\n<group>\\n...\\n</group>\\n</answer>\\n\\n# Example\\n\\nUser: apple, orange, banana, pear, corolla, charger,\\nAssistant: <reasoning>\\nThe first group are all fruits.\\nThe second group are all cars.\\n</reasoning>\\n<answer>\\n<group>apple, orange, banana, pear</group>\\n<group>corolla, charger</group>\\n</answer>\\n\\n# Example\\n\\nUser: dog, cat, red, white,\\nAssistant: <reasoning>\\nThe first group are all animals.\\nThe second group are all colors.\\n</reasoning>\\n<answer>\\n<group>dog, cat</group>\\n<group>red, white</group>\\n</answer>\\n',\n",
-       "   'role': 'system'},\n",
-       "  {'content': 'crush, rout, shellac, trash, cami, halter, tank, tee, bottom, buns, seat, tail, blue, fin, gray, right',\n",
-       "   'role': 'user'}],\n",
-       " 'answer': '<answer><group>crush, rout, shellac, trash</group>\\n<group>cami, halter, tank, tee</group>\\n<group>bottom, buns, seat, tail</group>\\n<group>blue, fin, gray, right</group></answer>',\n",
-       " 'answer_groups': [['crush', 'rout', 'shellac', 'trash'],\n",
-       "  ['cami', 'halter', 'tank', 'tee'],\n",
-       "  ['bottom', 'buns', 'seat', 'tail'],\n",
-       "  ['blue', 'fin', 'gray', 'right']]}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "candle, crayon, honeycomb, seal, defense, excuse, out, reason, kettles, mittens, raindrops, whiskers, canine, fang, molar, tusk\n"
+     ]
     }
    ],
    "source": [
-    "first_sample = wrapper.data_module.train_dataset[0]\n",
-    "first_sample"
+    "first_sample = wrapper.data_module.train_dataset[1]\n",
+    "print(first_sample['prompt'][1]['content'])"
    ]
   },
   {
