--- a/notebooks/grpo_writing_dev.ipynb
+++ b/notebooks/grpo_writing_dev.ipynb
@@ -2,18 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "\n",
     "sys.path.append(\"..\")\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from trl_wrapper.trainer_wrapper import TrainerWrapper, GRPO_WRITING_CONFIG, SMOL_LM_135M, TXT_BT_DPO_CONFIG\n",
+    "from trl_wrapper.trainer_wrapper import TrainerWrapper, GRPO_WRITING_CONFIG, SMOL_LM_135M\n",
     "\n",
-    "cfg = TXT_BT_DPO_CONFIG\n",
+    "cfg = GRPO_WRITING_CONFIG\n",
     "cfg.train_batch_size = 2\n",
     "cfg.num_generations = 2\n",
     "cfg.model_id_or_path = SMOL_LM_135M\n",
@@ -23,52 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['scores', 'completion', 'instruction', 'model_id', 'prompt_id',\n",
-      "       'instruction_id', 'score_total'],\n",
-      "      dtype='object')\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/h0/6v9c2xns5lbc32tsmk83rh000000gn/T/ipykernel_12117/4268088263.py:16: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
-      "  dataset_pd.groupby(\"instruction_id\").apply(_pick_completions).reset_index()\n"
+      "\u001b[32m2025-04-12 10:58:17.417\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m289\u001b[0m - \u001b[1mSetting padding side to: right\u001b[0m\n",
+      "\u001b[32m2025-04-12 10:58:17.430\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_model\u001b[0m:\u001b[36m300\u001b[0m - \u001b[1mUsing device: mps\u001b[0m\n",
+      "\u001b[32m2025-04-12 10:58:17.430\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_model\u001b[0m:\u001b[36m314\u001b[0m - \u001b[1mLoading model HuggingFaceTB/SmolLM2-135M-Instruct with attn_impl: sdpa\u001b[0m\n"
      ]
     }
    ],
-   "source": [
-    "from dataset.writing import _sum_scores, _pick_completions\n",
-    "import pandas as pd\n",
-    "dataset_pd = pd.read_parquet(\"../dataset_files/backtranslate_best_of_n.parquet\")\n",
-    "\n",
-    "dataset_pd[\"instruction_id\"] = (\n",
-    "    dataset_pd[\"instruction\"].astype(\"category\").cat.codes\n",
-    ")\n",
-    "\n",
-    "dataset_pd[\"score_total\"] = dataset_pd[\"scores\"].apply(_sum_scores)\n",
-    "\n",
-    "dataset_pd = dataset_pd.groupby(\"instruction_id\").filter(\n",
-    "    lambda group: group[\"score_total\"].max() != group[\"score_total\"].min()\n",
-    ")\n",
-    "print(dataset_pd.columns)\n",
-    "dataset_pd = (\n",
-    "    dataset_pd.groupby(\"instruction_id\").apply(_pick_completions).reset_index()\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "wrapper = TrainerWrapper(cfg)\n",
     "wrapper.init_model()"
@@ -76,24 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-04-01 22:28:52.436\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_data_module\u001b[0m:\u001b[36m351\u001b[0m - \u001b[1mUsing chat template override: smollmv2\u001b[0m\n",
-      "\u001b[32m2025-04-01 22:28:52.437\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.wrapper_config\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m133\u001b[0m - \u001b[1mCache dir: ../dataset_caches/writing_d_p_o_data_module\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['scores', 'completion', 'instruction', 'model_id', 'prompt_id',\n",
-      "       'instruction_id', 'score_total'],\n",
-      "      dtype='object')\n"
+      "\u001b[32m2025-04-12 11:00:22.498\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.trainer_wrapper\u001b[0m:\u001b[36minit_data_module\u001b[0m:\u001b[36m340\u001b[0m - \u001b[1mUsing chat template override: smollmv2\u001b[0m\n",
+      "\u001b[32m2025-04-12 11:00:22.498\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mtrl_wrapper.wrapper_config\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m145\u001b[0m - \u001b[1mCache dir: ../dataset_caches/writing_g_r_p_o_data_module\u001b[0m\n"
      ]
     }
    ],
@@ -103,11 +70,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['instruction', 'paragraph', 'text', 'title', 'author', 'id'],\n",
+       "    num_rows: 10647\n",
+       "})"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "wrapper.data_module.train_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Write a science fiction paragraph in a gritty, military style, focusing on a protagonist, Ensign Riley, who is being unfairly targeted by superiors on a spaceship. The tone should be weary and resentful, highlighting the protagonist\\'s exhaustion and frustration. Start with an alarm blaring and a ship-wide announcement of a \"containment failure.\"\\n\\nRiley should be abruptly awakened from a too-short sleep cycle following a long, mandated shift. He\\'s been consistently assigned unfavorable shifts despite regulations due to a vindictive superior, Lieutenant Commander Thorne. His sleep is further disrupted by more senior officers, Lieutenants Carr, Davis, and Flores, who deliberately inconvenience him, forcing him to perform demeaning tasks.\\n\\nInclude an incident where his personal belongings are tampered with, resulting in Riley having to scramble to prepare for duty. As a result of these deliberate delays, he arrives late and improperly dressed for his station. The paragraph should culminate in his being dismissed from duty by a senior officer, creating a sense of further injustice and resentment. Indicate the situation will reflect poorly on his permanent record.\\n'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wrapper.data_module.train_dataset[0]['instruction']"
    ]
   },
   {
